# monstersprite

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  EntityManager.hpp  GameEntity.hpp  IComponent.hpp  Sprite2DComponent.hpp
src/: CMakeLists.txt  Sprite2DComponent.cpp  SpriteComponent.cpp  main.cpp
